--- a/write-up/references.bib
+++ b/write-up/references.bib
@@ -361,3 +361,62 @@ PMID: 33901420},
 	date = {2022-01-21},
 	url = {http://dx.doi.org/10.1101/2022.01.17.22269450}
 }
+
+@article{dickerman2022,
+	title = {Comparative Effectiveness of BNT162b2 and mRNA-1273 Vaccines in U.S. Veterans},
+	author = {Dickerman, Barbra A. and Gerlovin, Hanna and Madenci, Arin L. and Kurgansky, Katherine E. and Ferolito, Brian R. and {Figueroa Muñiz}, Michael J. and Gagnon, David R. and Gaziano, J. Michael and Cho, Kelly and Casas, Juan P. and {Hernán}, Miguel A.},
+	year = {2022},
+	month = {01},
+	date = {2022-01-13},
+	journal = {New England Journal of Medicine},
+	pages = {105--115},
+	volume = {386},
+	number = {2},
+	doi = {10.1056/nejmoa2115463},
+	url = {http://dx.doi.org/10.1056/NEJMoa2115463},
+	langid = {en}
+}
+
+@article{andrews2022,
+	title = {Effectiveness of COVID-19 booster vaccines against COVID-19-related symptoms, hospitalization and death in England},
+	author = {Andrews, Nick and Stowe, Julia and Kirsebom, Freja and Toffa, Samuel and Sachdeva, Ruchira and Gower, Charlotte and Ramsay, Mary and Lopez Bernal, Jamie},
+	year = {2022},
+	month = {01},
+	date = {2022-01-14},
+	journal = {Nature Medicine},
+	pages = {831--837},
+	volume = {28},
+	number = {4},
+	doi = {10.1038/s41591-022-01699-1},
+	url = {http://dx.doi.org/10.1038/s41591-022-01699-1},
+	langid = {en}
+}
+
+@article{ioannou2022a,
+	title = {Comparison of Moderna versus Pfizer-BioNTech COVID-19 vaccine outcomes: A target trial emulation study in the U.S. Veterans Affairs healthcare system},
+	author = {Ioannou, George N. and Locke, Emily R. and Green, Pamela K. and Berry, Kristin},
+	year = {2022},
+	month = {03},
+	date = {2022-03},
+	journal = {eClinicalMedicine},
+	pages = {101326},
+	volume = {45},
+	doi = {10.1016/j.eclinm.2022.101326},
+	url = {http://dx.doi.org/10.1016/j.eclinm.2022.101326},
+	langid = {en}
+}
+
+@article{munro2021,
+	title = {Safety and immunogenicity of seven COVID-19 vaccines as a third dose (booster) following two doses of ChAdOx1 nCov-19 or BNT162b2 in the UK (COV-BOOST): a blinded, multicentre, randomised, controlled, phase 2 trial},
+	author = {Munro, Alasdair P S and Janani, Leila and Cornelius, Victoria and Aley, Parvinder K and Babbage, Gavin and Baxter, David and Bula, Marcin and Cathie, Katrina and Chatterjee, Krishna and Dodd, Kate and Enever, Yvanne and Gokani, Karishma and Goodman, Anna L and Green, Christopher A and Harndahl, Linda and Haughney, John and Hicks, Alexander and van der Klaauw, Agatha A and Kwok, Jonathan and Lambe, Teresa and Libri, Vincenzo and Llewelyn, Martin J and McGregor, Alastair C and Minassian, Angela M and Moore, Patrick and Mughal, Mehmood and Mujadidi, Yama F and Murira, Jennifer and Osanlou, Orod and Osanlou, Rostam and Owens, Daniel R and Pacurar, Mihaela and Palfreeman, Adrian and Pan, Daniel and Rampling, Tommy and Regan, Karen and Saich, Stephen and Salkeld, Jo and Saralaya, Dinesh and Sharma, Sunil and Sheridan, Ray and Sturdy, Ann and Thomson, Emma C and Todd, Shirley and Twelves, Chris and Read, Robert C and Charlton, Sue and Hallis, Bassam and Ramsay, Mary and Andrews, Nick and Nguyen-Van-Tam, Jonathan S and Snape, Matthew D and Liu, Xinxue and Faust, Saul N and Riordan, Andrew and Ustianowski, Andrew and Rogers, Chris A and Hughes, Stephen and Longshaw, Laura and Stockport, Jane and Hughes, Rachel and Grundy, Lynne and Tudor Jones, Lona and Guha, Arpan and Snashall, Emma and Eadsforth, Tom and Reeder, Sally and Storton, Kim and Munusamy, Malathi and Tandy, Bridget and Egbo, Akamino and Cox, Stephen and Ahmed, Nabeela Nazir and Shenoy, Anil and Bousfield, Rachel and Wixted, Donna and Gutteridge, Helen and Mansfield, Becky and Herbert, Christopher and Holliday, Kyra and Calderwood, James and Barker, Dominique and Brandon, Jacqueline and Tulloch, Hayley and Colquhoun, Suzie and Thorp, Helen and Radford, Helen and Evans, Julie and Baker, Helena and Thorpe, Jeanette and Batham, Sally and Hailstone, Jessica and Phillips, Rachael and Kumar, Dileep and Westwell, Fran and Makia, Fiona and Hopkins, NinaSimone and Barcella, Lara and Mpelembue, Mushiya and dabagh, Maja and lang, Matilda and khan, Farida and Adebambo, Olumide and Chita, Sunder and Corrah, Tumena and Whittington, Ashley and John, Laurence and Roche, Siobhan and Wagstaff, Lynda and Farrier, Adam and Bisnauthsing, Karen and Serafimova, Teona and Nanino, Elisa and Cooney, Enya and Wilson-Goldsmith, Jaimie and Nguyen, Hanna and Mazzella, Andrea and Jackson, Beth and Aslam, Suahil and Bawa, Tanveer and Broadhead, Samantha and Farooqi, Sadaf and Piper, Jo and Weighell, Rowena and Pickup, Lorinda and Shamtally, Djamila and Domingo, Jason and Kourampa, Evgenia and Hale, Colin and Gibney, Jennifer and Stackpoole, Michael and Rashid-Gardner, Zalina and Lyon, Rebecca and McDonnell, Chloe and Cole, Christine and Stewart, Anna and McMillan, Gillian and Savage, Mary and Beckett, Helen and Moorbey, Chantelle and Desai, Amisha and Brown, Claire and Naker, Kush and Qureshi, Ehsaan and Trinham, Charlotte and Sabine, Charlotte and Moore, Sophie and Hurdover, Steve and Justice, Edwin and Smith, David and Plested, Emma and Ferreira Da Silva, Carla and White, Rachel and Robinson, Hannah and Cifuentes, Liliana and Morshead, Gertraud and Drake-Brockman, Rachael and Kinch, Patrick and Kasanyinga, Mwila and Clutterbuck, Elizabeth A. and Bibi, Sagida and Stuart, Arabella SV and Shaw, Robert H and Singh, Michael and Champaneri, Trishna and Irwin, Margaret and Khan, Mohammed and Kownacka, Alicja and Nabunjo, Martha and Osuji, Carool and Hladkiwskyj, John and Galvin, Dominic and Patel, Gita and Mouland, Johanna and Longhurst, Beverley and Moon, Maria and Giddins, Beth and Pereira Dias Alves, Carlota and Richmond, Leah and Minnis, Christine and Baryschpolec, Sonia and Elliott, Scott and Fox, Lauren and Graham, Victoria and Baker, Natalie and Godwin, Kerry and Buttigieg, Karren and Knight, Chanice and Brown, Phillip and Lall, Paminder and Shaik, Imam and Chiplin, Emily and Brunt, Emily and Leung, Stephanie and Allen, Lauren and Thomas, Steve and Fraser, Sara and Choi, Bea and Gouriet, Jade and Freedman, Andrew and Perkins, Jonathan and Gowland, Andrew and Macdonald, Jonathan and Seenan, John Paul and Starinskij, Igor and Seaton, Andrew and Peters, Erica and Singh, Stephen and Gardside, Ben and Bonnaud, Avril and Davies, Ceri and Gordon, Elizabeth and Keenan, Samantha and Hall, Jane and Wilkins, Suzanne and Tasker, Suzanne and James, Rob and Seath, Ingrid and Littlewood, Kelly and Newman, Joseph and Boubriak, Iryna and Suggitt, Debbie and Haydock, Helen and Bennett, Sara and Woodyatt, Wiesia and Hughes, Kerry and Bell, Judith and Coughlan, Tricia and van Welsenes, Donald and Kamal, Mohammed and Cooper, Chris and Tunstall, Simon and Ronan, Nicholas and Cutts, Rebecca and Dare, Tracey and Yim, Yee Ting Nicole and Whittley, Sarah and Ricamara, Marivic and Hamal, Shama and Adams, Kirsty and Baker, Holly and Driver, Kimberley and Turner, Nicola and Rawlins, Todd and Roy, Subarna and Merida-Morillas, Marta and Sakagami, Yukari and Andrews, Antonette and Goncalves cordeiro, Lillian and Stokes, Matthew and Ambihapathy, Wythehi and Spencer, Joanne and Parungao, Nina and Berry, Lisa and Cullinane, James and Presland, Laura and Ross-Russell, Amy and Warren, Sarah and Baker, Jonathan and Oliver, Abigail and Buadi, Amanda and Lee, Kim and Haskell, Louise and Romani, Rossana and Bentley, Ian and Whitbred, Tim and Fowler, Simon and Gavin, John and Magee, Alan and Watson, Tara and Nightingale, Kari and Marius, Phedra and Summerton, Eloise and Locke, Emily and Honey, Thomas and Lingwood, Aidan and de la Haye, Anastasia and Elliott, Ryan Stephen and Underwood, Karen and King, Mikayala and Davies-Dear, Sharon and Horsfall, Emily and Chalwin, Olivia and Burton, Holly and Edwards, Christopher J and Welham, Benjamin and Garrahy, Sarah and Hall, Fran and Ladikou, Eleni and Mullan, Dee and Hansen, Daniel and Campbell, Marion and Dos Santos, Filipa and Habash-Bailey, Haniah and Lakeman, Nicki and Branney, Debbie and Vamplew, Luke and Hogan, Alison and Frankham, Jorden and Wiselka, Martin and Vail, Dennyl and Wenn, Victoria and Renals, Valerie and Ellis, Kate and Lewis-Taylor, Jessica and Magan, Javier and Hardy, Anna and Appleby, Kim},
+	year = {2021},
+	month = {12},
+	date = {2021-12},
+	journal = {The Lancet},
+	pages = {2258--2276},
+	volume = {398},
+	number = {10318},
+	doi = {10.1016/s0140-6736(21)02717-3},
+	url = {http://dx.doi.org/10.1016/S0140-6736(21)02717-3},
+	langid = {en}
+}
