--- a/write-up/manuscript/references.bib
+++ b/write-up/manuscript/references.bib
@@ -516,3 +516,59 @@ PMID: 33901420},
 	url = {http://dx.doi.org/10.1056/NEJMoa2116414},
 	langid = {en}
 }
+
+@misc{
+  JCVIStatementCOVID19,
+  title={JCVI statement on the COVID-19 vaccination programme for 2023: 8 November 2022},
+  url={https://www.gov.uk/government/publications/covid-19-vaccination-programme-for-2023-jcvi-interim-advice-8-november-2022/jcvi-statement-on-the-covid-19-vaccination-programme-for-2023-8-november-2022},
+journal={GOV.UK} }
+
+@misc{
+  JCVIStatementSpring,
+  title={JCVI statement on spring 2023 COVID-19 vaccinations, 22 February 2023},
+  url={https://www.gov.uk/government/publications/spring-2023-covid-19-vaccination-programme-jcvi-advice-22-february-2023/jcvi-statement-on-spring-2023-covid-19-vaccinations-22-february-2023},
+journal={GOV.UK} }
+
+@misc{
+  NHSEnglandNHSc,
+  title={NHS England » NHS launches spring covid jab campaign for five million most vulnerable people},
+url={https://www.england.nhs.uk/2023/04/nhs-launches-spring-covid-jab-campaign-for-five-million-most-vulnerable-people/} }
+
+@misc{
+  COVID19GreenBook,
+  title={COVID-19: the green book, chapter 14a},
+  url={https://www.gov.uk/government/publications/covid-19-the-green-book-chapter-14a},
+journal={GOV.UK} }
+
+@misc{
+  CoronavirusCOVID19Notification2020,
+  title={Coronavirus (COVID-19): notification to organisations to share information - GOV.UK},
+  url={https://web.archive.org/web/20200421171727/https://www.gov.uk/government/publications/coronavirus-covid-19-notification-of-data-controllers-to-share-information},
+  year={2020},
+month={Apr} }
+
+@misc{
+  NHSEnglandOpenSAFELY,
+  title={The NHS England OpenSAFELY COVID-19 service - privacy notice},
+  url={https://digital.nhs.uk/coronavirus/coronavirus-covid-19-response-information-governance-hub/the-nhs-england-opensafely-covid-19-service-privacy-notice},
+journal={NHS Digital} }
+
+@misc{
+  WithdrawnWithdrawnCoronavirus2022,
+  title={[Withdrawn] [withdrawn] Coronavirus (COVID-19): notice under regulation 3(4) of the Health Service (Control of Patient Information) Regulations 2002 – general},
+  url={https://www.gov.uk/government/publications/coronavirus-covid-19-notification-of-data-controllers-to-share-information/coronavirus-covid-19-notice-under-regulation-34-of-the-health-service-control-of-patient-information-regulations-2002-general--2},
+  journal={GOV.UK},
+  year={2022},
+month={Jul} }
+
+@misc{
+  COVID19PublicHealth,
+  title={COVID-19 Public Health Directions 2020},
+  url={https://digital.nhs.uk/about-nhs-digital/corporate-information-and-documents/directions-and-data-provision-notices/secretary-of-state-directions/covid-19-public-health-directions-2020},
+journal={NHS Digital} }
+
+@misc{
+  ConfidentialityAdvisoryGroup,
+  title={Confidentiality Advisory Group},
+  url={https://www.hra.nhs.uk/about-us/committees-and-services/confidentiality-advisory-group/},
+journal={Health Research Authority} }
