minor updates as discussed

--- a/write-up/manuscript/references.bib
+++ b/write-up/manuscript/references.bib
@@ -650,19 +650,38 @@ Thomas2021-zm,
 }
 
 
-@UNPUBLISHED{
-Kirsebom2023-fq,
-  title    = "Effectiveness of the adjuvanted {Sanofi/GSK} ({VidPrevtyn} Beta)
-              and {Pfizer-BioNTech} (Comirnaty {Original/Omicron} {BA.4-5})
-              bivalent vaccines against hospitalisation amongst adults aged 75
-              years and older in England, estimated using a test-negative case
-              control study design",
-  author   = "Kirsebom, Freja Cordelia M{\o}ller and Andrews, Nick and Stowe,
-              Julia and Dabrera, Gavin and Ramsay, Mary and Bernal, Jamie Lopez",
-  abstract = "medRxiv - The Preprint Server for Health Sciences",
-  journal  = "medRxiv",
-  pages    = "2023.09.28.23296290",
-  month    =  oct,
-  year     =  2023,
-  language = "en"
+@article{
+  kirsebomEffectivenessAdjuvantedSanofi2023,
+  title={Effectiveness of the adjuvanted Sanofi/GSK (VidPrevtyn Beta) and Pfizer-BioNTech (Comirnaty Original/Omicron BA.4-5) bivalent vaccines against hospitalisation amongst adults aged 75 years and older in England, estimated using a test-negative case control study design},
+  url={https://www.medrxiv.org/content/10.1101/2023.09.28.23296290v2},
+  DOI={10.1101/2023.09.28.23296290},
+author={Kirsebom, Freja Cordelia Møller and Andrews, Nick and Stowe, Julia and Dabrera, Gavin and Ramsay, Mary and Bernal, Jamie Lopez} }
+
+@misc{
+  SanofiPasteurCOVID19,
+  title={Sanofi Pasteur COVID-19 vaccine authorised by MHRA},
+  url={https://www.gov.uk/government/news/sanofi-pasteur-covid-19-vaccine-authorised-by-mhra},
+journal={GOV.UK} }
+
+@article{zouNeutralizationBABA2023,
+	title = {Neutralization of BA.4{\textendash}BA.5, BA.4.6, BA.2.75.2, BQ.1.1, and XBB.1 with Bivalent Vaccine},
+	author = {Zou, Jing and Kurhade, Chaitanya and Patel, Sohil and Kitchin, Nicholas and Tompkins, Kristin and Cutler, Mark and Cooper, David and Yang, Qi and Cai, Hui and Muik, Alexander and Zhang, Ying and Lee, Dung-Yang and {{\c{S}}ahin}, Ugur and Anderson, Annaliesa S. and Gruber, William C. and Xie, Xuping and Swanson, Kena A. and Shi, Pei-Yong},
+	year = {2023},
+	month = {03},
+	date = {2023-03-02},
+	journal = {New England Journal of Medicine},
+	pages = {854--857},
+	volume = {388},
+	number = {9},
+	doi = {10.1056/NEJMc2214916},
+	url = {https://doi.org/10.1056/NEJMc2214916},
+	note = {Publisher: Massachusetts Medical Society
+{\_}eprint: https://doi.org/10.1056/NEJMc2214916
+PMID: 36734885}
+}
+
+@misc{SecondPfizerBioNTech,
+	title = {Second Pfizer/BioNTech bivalent COVID-19 booster vaccine approved by UK medicines regulator},
+	url = {https://www.gov.uk/government/news/second-pfizerbiontech-bivalent-covid-19-booster-vaccine-approved-by-uk-medicines-regulator},
+	langid = {en}
 }
