Add manuscript edits

--- a/write-up/manuscript/manuscript.qmd
+++ b/write-up/manuscript/manuscript.qmd
@@ -64,7 +64,7 @@ TBD: Colm D Andrews^1^, Edward PK Parker^2^, Em Prestige^2^, Venexia Walker^3,4^
 
 *Introduction* The spring 2023 COVID-19 booster vaccination programme in England used both Pfizer BA.4-5 and Sanofi vaccines. All people aged 75 years or over and the clinically vulnerable were eligible to receive a booster dose. Direct comparisons of effectiveness against severe COVID-19 events of these two vaccines for boosting have not been made in trials or observational data.
 
-*Methods* With the approval of NHS England, we used the OpenSAFELY-TPP database to compare effectiveness of the Pfizer BA.4-5 and Sanofi vaccines during the spring 2023 booster programme, between 1 April and 30 June 2023. We investigated two cohorts separately: those aged 75 or over (75+); those aged 50 or over and clinically vulnerable (CV). In each cohort, vaccine recipients were matched on date of vaccination, COVID-19 vaccine history, age, and other characteristics. Effectiveness outcomes were COVID-19 Emergency Department (ED) attendance, COVID-19 hospital admission, and COVID-19 death up to 16 weeks after vaccination. Safety outcomes were Pericarditis and Myocarditis up to 4 weeks after vaccination. We report the cumulative incidence of each outcome, and compare safety and effectiveness using risk differences (RD), relative risks (RR), and incidence rate ratios (IRRs).
+*Methods* With the approval of NHS England, we used the OpenSAFELY-TPP database to compare effectiveness of the Pfizer BA.4-5 and Sanofi vaccines during the spring 2023 booster programme, between 1 April and 30 June 2023. We investigated two cohorts separately: those aged 75 or over (75+); those aged 50 or over and clinically vulnerable (CV). In each cohort, vaccine recipients were matched on date of vaccination, COVID-19 vaccine history, age, and other characteristics. Effectiveness outcomes were COVID-19 hospital admission, COVID-19 critical care admission, and COVID-19 death up to 16 weeks after vaccination. Safety outcomes were Pericarditis and Myocarditis up to 4 weeks after vaccination. We report the cumulative incidence of each outcome, and compare safety and effectiveness using risk differences (RD), relative risks (RR), and incidence rate ratios (IRRs).
 
 *Results* `r label_number(1, big.mark=",")(filter(rst$cv$flowchart, crit=="c5") %>% pull(n) %>% sum())` people were 1-1 matched in the CV cohort, and `r label_number(1, big.mark=",")(filter(rst$age75plus$flowchart, crit=="c5") %>% pull(n) %>% sum())` in the 75+ cohort, contributing a total `r rst$cv$contrasts_table %>% filter(outcome=="coviddeath", subgroup=="all") %>% pull(persontime_weeks)` and `r rst$age75plus$contrasts_table %>% filter(outcome=="coviddeath", subgroup=="all") %>% pull(persontime_weeks)` person-weeks of follow-up respectively.
 The incidence of COVID-19 hospital admission was higher for Sanofi than for Pfizer BA.4-5. In the CV cohort, 16-week risks per `r perN_format` people were `r rst$cv$contrasts_table %>% filter(outcome=="covidadmitted", subgroup=="all") %>% pull(riskCI_0_95)` for Pfizer BA.4-5 and `r rst$cv$contrasts_table %>% filter(outcome=="covidadmitted", subgroup=="all") %>% pull(riskCI_1)` for Sanofi, with an IRR of `r rst$cv$contrasts_table %>% filter(outcome=="covidadmitted", subgroup=="all") %>% pull(irrCI_95)`. In the 75+ cohort, these were `r rst$age75plus$contrasts_table %>% filter(outcome=="covidadmitted", subgroup=="all") %>% pull(riskCI_0)` for Pfizer BA.4-5 and `r rst$age75plus$contrasts_table %>% filter(outcome=="covidadmitted", subgroup=="all") %>% pull(riskCI_1)` for Sanofi, with an IRR of `r rst$age75plus$contrasts_table %>% filter(outcome=="covidadmitted", subgroup=="all") %>% pull(irrCI)`. These finding were similar across all pre-specified subgroups.
@@ -236,7 +236,7 @@ During the spring 2023 COVID-19 booster programme in England, COVID-19-related h
 
 ## Contributions
 
-Conceptualization: WJH, EPKP, VW, TP, BG, MAH, and JACS. Data curation: WJH, HJC, AW, AM, BM, CDA, and SCJB. Formal analysis: WJH, EPKP, and VW. Funding acquisition: JM, BG, and JACS. Methodology: WJH, EPKP, VW, TP, MAH, and JACS. Project administration: WJH, AM, JM, BG, CDA, and JACS. Resources: WJH, HJC, AW, AM, JM, BM, SCJB, and BG. Software: WJH, EPKP, and SCJB. Supervision: MAH and JACS. Validation: WJH, EPKP, CDA, and VW. Visualization: WJH, and EPKP. Writing - original draft: WJH. Writing - review & editing: WJH, EPKP, VW, TP, HJC, AW, CDA, AM, JM, BM, SCJB, BG, MAH, and JACS.
+Conceptualization: WJH, EPKP, VW, TP, BG, MAH, and JACS. Data curation: WJH, CDA, EP, CW, BS, HJC, AW, AM, BM, and SCJB. Formal analysis: WJH, CDA, EPKP, and VW. Funding acquisition: BG, and JACS. Methodology: WJH, EPKP, VW, TP, MAH, and JACS. Project administration: WJH, CDA, AM, BG,, and JACS. Resources: WJH, CDA, HJC, AW, AM, BM, BS, SCJB, and BG. Software: WJH, CDA, EP,  EPKP, BS, and SCJB. Supervision: WJH and JACS. Validation: WJH, EP, EPKP, CDA, CW, and VW. Visualization: WJH, CDA, and EPKP. Writing - original draft: WJH. Writing - review & editing: WJH, CDA, EPKP, VW, TP, HJC, AW, AM, BM, SCJB, BG, MAH, and JACS.
 
 ## Information governance and ethical approval
 
@@ -260,7 +260,7 @@ These tools in turn enable researchers with OpenSAFELY data access agreements to
 
 ## Funding
 
-This work was jointly funded by UKRI \[COV0076;MR/V015737/1\], the Longitudinal Health and Wellbeing strand of the National Core Studies programme (MC_PC_20030; MC_PC_20059; COV-LT-0009), NIHR and Asthma UK-BLF. The OpenSAFELY data science platform is funded by the Wellcome Trust (222097/Z/20/Z) and MRC (MR/V015737/1, MC_PC_20059, MR/W016729/1). In addition, development of OpenSAFELY has been funded by the the NIHR funded CONVALESCENCE programme (COV-LT-0009), NIHR (NIHR135559, COV-LT2-0073), and the Data and Connectivity National Core Study funded by UK Research and Innovation (MC_PC_20058) and Health Data Research UK (HDRUK2021.000).
+This work was jointly funded by UKRI \(COV0076;MR/V015737/1\), the Longitudinal Health and Wellbeing strand of the National Core Studies programme (MC_PC_20030; MC_PC_20059; COV-LT-0009), NIHR and Asthma UK-BLF. The OpenSAFELY data science platform is funded by the Wellcome Trust (222097/Z/20/Z) and MRC (MR/V015737/1, MC_PC_20059, MR/W016729/1). In addition, development of OpenSAFELY has been funded by the the NIHR funded CONVALESCENCE programme (COV-LT-0009), NIHR (NIHR135559, COV-LT2-0073), and the Data and Connectivity National Core Study funded by UK Research and Innovation (MC_PC_20058) and Health Data Research UK (HDRUK2021.000).
 
 BG's work on better use of data in healthcare more broadly is currently funded in part by: the Bennett Foundation, the Wellcome Trust, NIHR Oxford Biomedical Research Centre, NIHR Applied Research Collaboration Oxford and Thames Valley, the Mohn-Westlake Foundation; all Bennett Institute staff are supported by BG's grants on this work. EW holds grants from MRC. RHK was funded by UK Research and Innovation (Future Leaders Fellowship MR/S017968/1).
 
@@ -764,7 +764,7 @@ plot_subgroup("age75plus", "all")
 
 \newpage
 
-#### Figure 3: Estimated incidence rate ratios at comparing the safety (4-weeks) and effectiveness (16-weeks) of Sanofi and Pfizer BA.4-5, overall and within subgroups, together with p-values for between-subgroup heterogeneity.
+#### Figure 3: Estimated incidence rate ratios at comparing the safety (4-weeks) and effectiveness (16-weeks) of Sanofi and Pfizer BA.4-5, overall and within subgroups.
 
 ```{r figure-contrasts-irr}
 #| echo: false
